--- a/TicketEase/Views/Orders/ShoppingCart.cshtml
+++ b/TicketEase/Views/Orders/ShoppingCart.cshtml
@@ -1,4 +1,4 @@
-﻿@using TicketEase.Data.ViewModels;
+@using TicketEase.Data.ViewModels;
 @model ShoppingCartVM
 
 @{
@@ -22,7 +22,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach(var item in Model.ShoppingCart.ShoppingCartItems)
+                @foreach (var item in Model.ShoppingCart.ShoppingCartItems)
                 {
                     <tr>
                         <td class="align-middle">@item.Amount</td>
@@ -30,10 +30,10 @@
                         <td class="align-middle">@item.Movie.Price.ToString("c")</td>
                         <td class="align-middle">@((item.Amount * item.Movie.Price).ToString("c"))</td>
                         <td class="align-middle">
-                            <a class="text-danger" asp-controller="Orders" asp-action="RemoveItemFromShoppingCart" asp-rout-id="@item.Movie.Id">
+                            <a class="text-danger" asp-controller="Orders" asp-action="RemoveItemFromShoppingCart" asp-route-id="@item.Movie.Id">
                                 <i class="bi bi-cart-dash"></i>
                             </a>
-                            <a class="text-success" asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-rout-id="@item.Movie.Id">
+                            <a class="text-success" asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-route-id="@item.Movie.Id">
                                 <i class="bi bi-cart-plus"></i>
                             </a>
                         </td>
