--- a/TicketEase/Views/Shared/_Layout.cshtml
+++ b/TicketEase/Views/Shared/_Layout.cshtml
@@ -37,17 +37,15 @@
 								<i class="bi bi-film"></i> Movies
 							</a>
 						</li>
-						<li class="nav-item dropdown">
+						<li class="nav-item dropdown management-dropdown">
 							<a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="bi bi-gear"></i> Management
 							</a>
-              
 							<div class="dropdown-menu" style="background-color: #e3f2fd;" aria-labelledby="navbarDropdown">
 								<a class="dropdown-item" asp-controller="Cinemas" asp-action="Index"><i class="bi bi-camera-reels text-primary"></i> Cinemas</a>
 								<a class="dropdown-item" asp-controller="Producers" asp-action="Index"><i class="bi bi-headset text-primary"></i> Producers</a>
 								<a class="dropdown-item" asp-controller="Actors" asp-action="Index"><i class="bi bi-person-square text-primary"></i> Actors</a>
 							</div>
-              
 						</li>
 					</ul>
 
@@ -59,6 +57,22 @@
 					<ul class="navbar-nav">
 						@await Component.InvokeAsync("ShoppingCartSummary")
 					</ul>
+
+					@* user profile *@
+					<div class="dropdown profile-dropdown">
+						<button class="btn btn-outline-success dropdown-toggle" type="button" id="profil-btn" data-toggle="dropdown" aria-expanded="false">
+							<i class="bi bi-person-badge"></i> Hello User
+						</button>
+						<ul class="dropdown-menu" aria-labelledby="profil-btn">
+							<li>
+								<a class="dropdown-item" asp-controller="Orders" asp-action="Index">
+									<i class="bi bi-list"></i> Orders
+								</a>
+							</li>
+						</ul>
+						<div>
+						</div>
+					</div>
                 </div>
             </div>
         </nav>
