--- a/TicketEase/Views/Orders/ShoppingCart.cshtml
+++ b/TicketEase/Views/Orders/ShoppingCart.cshtml
@@ -51,11 +51,15 @@
             </tfoot>
         </table>
 
-        <div class="text-center">
+        <div class="text-right">
             <div class="btn-group">
-                <a class="btn btn-outline-primary" asp-action="CompleteOrder">
+                @* <a class="btn btn-outline-primary" asp-action="CompleteOrder">
                     Complete order
-                </a>
+                </a> *@
+                <div id="paypal-btn">
+
+                </div>
+                <span style="padding:5px;"></span>
                 <a class="btn btn-outline-success" asp-controller="Movies" asp-action="Index">
                     Add more items
                 </a>
@@ -63,3 +67,32 @@
         </div>
     </div>
 </div>
+@section Scripts{
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+    <script>
+        paypal.Button.render({
+            // configure environment
+            env: 'sandbox',
+            client: {
+                sandbox: 'AX2x941FV_x-9hny7LyKhmTq65neG-m_QNWUdIqaf4oHWYHLqtzvtjFjsRj7NuNqyWzZU4MDEENZQqcS'
+            },
+            
+            // costomize button
+            locale: 'en_US',
+            style: {
+                size:'small',
+                color:'gold',
+                shape:'pill'
+            },
+            commit: true,
+            //Set up a payment
+            payment: function(data,actions){
+                console.log("payment set up");
+            },
+            //Execute the payment
+            onAuthorize: function (data, actions) {
+                console.log("payment executed");
+            }
+        }, '#paypal-btn');
+    </script>
+}
